# reddit-post-scraper

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml
backend/: main.py
backend/config/: config.py
backend/tests/: test_main.py
python/: Makefile  pyproject.toml
python/python/: main.py
python/python/config/: config.py
python/tests/: test_main.py
