[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
boto3 = "^1.14.56"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
praw = "^7.1.0"
python-dotenv = "^0.14.0"
pytest = {version = "^6.0.1", python = "3.7"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"